--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </div>
     <div class="container-2 w-container">
       <div class="w-layout-grid grid">
+        <div class="speaking-block"><strong>Speaker<br></strong>Janyary 2020 - <a href="https://www.qcbt.ca/" target="_blank">Queen's Conference on Business & Tecnology</a></div>
         <div class="speaking-block"><strong>Panelist<br></strong>November 2019 - <a href="https://facebook.com/events/2450620955056045" target="_blank">Empowered By Tech!</a></div>
         <div id="w-node-fd3e1a0c2434-5698fb5d" class="speaking-block"><strong>Speaker</strong> <br>October 2019 - <a href="https://www.facebook.com/events/412808782710094/" target="_blank">Fidelity Hack </a></div>
         <div id="w-node-1738eafefecf-5698fb5d" class="speaking-block"><strong>Speaker</strong><br>January 2019 - <a href="https://starterhacks.ca" target="_blank">Starterhacks</a></div>
